CMakePM: Treat ambiguous header files (.h) as OBJC/CXX source files

... when in OBJC/CXX language contexts.

Amends 99185d04ec355f1046e9cc6fa45df247f5080536

Fixes: QTCREATORBUG-32212
Change-Id: I9b023b97f9ad2eec45f8b5fd695a1765fe9cf5bd
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>